--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,16 @@
 
     <script id="message-template" type="text/html">
       <div>
-        <p>{{message}}</p>
+        <p>{{createdAt}} - {{message}}</p>
       </div>
     </script>
 
     <script id="location-message-template" type="text/html">
       <div>
-        <p><a href="{{url}}" target="_blank">My Current Location</a></p>
+        <p>
+          {{createdAt}} -
+          <a href="{{url}}" target="_blank">My Current Location</a>
+        </p>
       </div>
     </script>
 
